# pigpio-remote

./: .clang-tidy  .gitmodules  BasicIo.cpp  BasicIo.h  CMakeLists.txt  Doxyfile  NoNagleSyncClient.h  PiConnection.cpp  PiConnection.h  PigpioError.h  helper.h  library.json  netdb.c  netdb.h  pigpio  pthread.c  pthread.h  result.h  socket_command.h  unistd.c
examples/: CMakeLists.txt
examples/blink-led-arduino/src/: main.cpp
examples/i2c-pcf8574-arduino/: platformio.ini
examples/i2c-pcf8574-arduino/lib/: pigpio-remote
examples/i2c-pcf8574-arduino/src/: main.cpp
examples/i2c-pcf8574-posix/: CMakeLists.txt  main.cpp
examples/read-pin-posix/: CMakeLists.txt  main.cpp
examples/sos-blink-posix/: CMakeLists.txt  main.cpp
include/pigpio-remote/: BasicIo.h  Configuration.h  I2cDevice.h  PiConnection.h  PigpioError.h  configuration.h
netinet/: tcp.h
pigpio1/: pigpiod_if2.cpp
src/: BasicIo.cpp  CMakeLists.txt  I2cDevice.cpp  PiConnection.cpp  PiConnectionInternals.h
src/communication/: Command.h  CommandBlock.h  ErrorCode.h
src/pigpio-communication/: ErrorCode.h  SocketCommand.h  command.h
src/pigpio1/: command.h  pigpiod_if2.h
src/platform/: BaseNoNagleSyncClient.h  NoNagleSyncClient.h  NoNagleSyncClientArduino.h  NoNagleSyncClientPosix.h  Platform.h  platform.h
src/platform/NoNagleSyncClient/: BaseNoNagleSyncClient.h  NoNagleSyncClientArduino.h  NoNagleSyncClientPosix.h
sys/: socket.c  socket.cpp  socket.h
tools/: fix-header-guards.sh
